[build-system]
requires = [
    "setuptools>=44,<60; python_version < '3.7'",
    "setuptools>=78.1.1; python_version >= '3.7'",
]
build-backend = "setuptools.build_meta"

[project]
name = "qtop"
dynamic = ["version"]
description = "qtop: the fast text mode way to monitor your cluster's utilization and status; the time has come to take back control of your cluster's scheduling business"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name="Sotiris Fragkiskos", email="sfranky@gmail.com"},
    { name="Fotis Georgatos", email="kefalonia@gmail.com"},
    { name="Nicola Trozzi", email="nicola.trozzi@outlook.com"},
]
requires-python = ">=3"

[project.urls]
"Homepage" = "https://github.com/qtop/qtop"

[project.scripts]
qtop = "qtop_py.qtop:main"

[tool.setuptools.dynamic]
version = {attr = "qtop_py.__version__"}

[tool.setuptools]
packages = ["qtop_py"]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F", "I"] ##
lint.ignore = ["I001"]  ## FIXME, ruff has a point

# Ruff 0.15.15 still exposes py37 as its lowest target; Python 3.6 runtime
# compatibility stays covered by the separate compat-py36 gate.
target-version = "py37"

## FG customisations
line-length = 180 # keep legacy output fixtures readable while reducing the previous 188-char ceiling
